# powerix

./: CMakeLists.txt  README.md
benchmark/: benchmark_pow.cpp  benchmark_pow_fractional.cpp
src/: error_util.hpp  pow_impl.hpp
